--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -19,27 +19,16 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_HUB_NAME }}
+          password: ${{ secrets.DOCKER_HUB_PWD }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: guovern/iptv-api:latest
+          tags: acceleratorwayne/personal-iptv-api:latest
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           build-args: |
             APP_WORKDIR=/iptv-api
             LITE=False
-
-      - name: Build and push Docker image (Lite)
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: guovern/iptv-api:lite
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
-          build-args: |
-            APP_WORKDIR=/iptv-api-lite
-            LITE=True
