--- a/.github/workflows/docker-build-aliyun.yml
+++ b/.github/workflows/docker-build-aliyun.yml
@@ -6,15 +6,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2 # pull代码到运行服务器上
-    - name: Login to Aliyun Container Registry (ACR)
-      uses: aliyun/acr-login@v1 # 使用阿里云镜像服务action
-      with:
-        login-server: crpi-29j2ntw0ui24wre6.cn-shanghai.personal.cr.aliyuncs.com # 务必正确填写镜像容器服务的登录地址
-        region-id: cn-shanghai # 务必正确填写镜像容器服务的登录地址
-        username: "${{ secrets.ALIYUN_USERNAME }}" # 引用GitHub repo设置的镜像容器服务用户名
-        password: "${{ secrets.ALIYUN_PWD }}" # 引用GitHub repo设置的镜像容器服务密码
-    - name: Build and Push Docker Image
-      run: |
-        docker build -t crpi-29j2ntw0ui24wre6.cn-shanghai.personal.cr.aliyuncs.com/wmliu/personal-iptv:latest .
-        docker push crpi-29j2ntw0ui24wre6.cn-shanghai.personal.cr.aliyuncs.com/wmliu/personal-iptv:latest
+     - name: Checkout repository
+       uses: actions/checkout@v3
+     - name: Login to Aliyun Container Registry (ACR)
+       uses: aliyun/acr-login@v1 # 使用阿里云镜像服务action
+       with:
+         login-server: crpi-29j2ntw0ui24wre6.cn-shanghai.personal.cr.aliyuncs.com # 务必正确填写镜像容器服务的登录地址
+         region-id: cn-shanghai # 务必正确填写镜像容器服务的登录地址
+         username: "${{ secrets.ALIYUN_USERNAME }}" # 引用GitHub repo设置的镜像容器服务用户名
+         password: "${{ secrets.ALIYUN_PWD }}" # 引用GitHub repo设置的镜像容器服务密码
+     - name: Build and Push Docker Image
+       run: |
+         docker build -t crpi-29j2ntw0ui24wre6.cn-shanghai.personal.cr.aliyuncs.com/wmliu/personal-iptv:latest .
+         docker push crpi-29j2ntw0ui24wre6.cn-shanghai.personal.cr.aliyuncs.com/wmliu/personal-iptv:latest
