--- a/.github/workflows/docker-build-aliyun.yml
+++ b/.github/workflows/docker-build-aliyun.yml
@@ -4,6 +4,7 @@ on: [push, pull_request] # 触发事件
 
 jobs:
   build:
+    if: ${{ github.ref == 'refs/heads/prod' || github.ref == 'refs/heads/docker' }}  # 1
     runs-on: ubuntu-latest
     steps:
      - name: Checkout repository
